k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secure-ity
  labels:
    name: secure-ity
    app: secure-ity
